# shapemapper2

./: CMakeLists.txt  meta.yaml  setup.cfg  shapemapper
internals/python/: cli.py
internals/python/pyshapemap/: component.py  components.py
