[metadata]
name = shapemapper2
version = 2.1.5.1
description =ShapeMapper automates the calculation of RNA structure probing reactivities from mutational profiling (MaP) experiments, in which chemical adducts on RNA are detected as internal mutations in cDNA through reverse transcription and read out by massively parallel sequencing. ShapeMapper performs
long_description = file: README.md 
long_description_content_type = text/markdown
keywords = RNA, folding, bioinformatics, RNAFold, ViennaRNA,
licence = GPL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
python_requires = >= 3.6
[options]
packages = find: 
include_package_data = True
install_requires =
    wheel
    cython
    scipy ==1.9
    numpy ==1.23
    sklearn
    ruamel_yaml
    matplotlib=1.5

[options.entry_points]
console_scripts =
    shapemapper2 = shapemapper2.python.cli:main_wrapper


